# ai-software-studio

./: .dockerignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  AGENTS.md  README.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements-build.in
backend/app/: __init__.py  main.py
backend/app/api/: contact.py  health.py  router.py
backend/app/core/: __init__.py  brand.py  config.py  cors.py
backend/app/middleware/: __init__.py  request_size.py  security_headers.py
backend/app/schemas/: contact.py
backend/app/services/: contact_delivery.py  contact_intake.py
backend/scripts/: format.ps1  lint.ps1  test.ps1
backend/tests/: conftest.py
backend/tests/contract/: test_api_security.py  test_contact_contract.py  test_health_contract.py
backend/tests/integration/: test_contact_delivery.py  test_cors.py
backend/tests/unit/: test_config.py  test_contact_schema.py  test_rate_limiter.py  test_request_size.py
tools/studio_loop/: README.md  pyproject.toml
tools/studio_loop/src/studio_loop/: __init__.py  __main__.py  checks.py  ci_repair.py  cli.py  codex_runner.py  controller.py  diff_guard.py  errors.py  feature_numbering.py  git_service.py  lifecycle.py  locking.py  models.py  prompts.py  publishing.py  pull_requests.py  recovery.py  redaction.py  retry_policy.py  roles.py  state_machine.py  state_store.py  task_graph.py  task_package_service.py  task_renderer.py  worktrees.py  (+3 more)
tools/studio_loop/tests/: conftest.py  test_autonomous_controller.py  test_ci_workflow.py  test_cli_feature_git.py  test_codex_project_guards.py  test_codex_runner.py  test_draft_pr_lifecycle.py  test_draft_pr_services.py  test_locking.py  test_models.py  test_package_metadata.py  test_process_runner.py  test_schemas.py  test_state_machine.py  test_state_store.py  test_task_pipeline.py  test_validation_profiles.py  test_write_surface.py
(+392 files in other folders)
